# router/providerRouter.go
@@ -61,17 +61,24 @@ func ProviderSetupsRoutes(app *fiber.App) {
 	providerServices.Get("/get-status", common.FetchStatusById)
 
 	providerServices.Get("/get-all-doctors", hospClinic.GetAllDoctors)
+	providerServices.Get("/get-physiotherapist-professional-details", physiotherapist.FetchProfessionalDetaiById)
+	providerServices.Get("/get-physiotherapist-personal-details", physiotherapist.FetchPersonalDetailsById)
+	providerServices.Get("/get-physiotherapist-service-info/:serviceId", physiotherapist.GetServiceInfo)
 	providerServices.Get("/get-all-trainers", fitnessCenter.GetAllTrainers)
 	providerServices.Get("/get-pharmacy-other-services", pharmacy.GetOtherServices)
 	providerServices.Get("/get-fitness-other-services", fitnessCenter.GetOtherServices)
 	providerServices.Get("/get-all-subscriptions", fitnessCenter.GetAllSubscriptions)
+	providerServices.Get("/get-physiotherapist-services", physiotherapist.GetPhysiotherapistServices)
 	providerServices.Get("/get-hospClinic-other-services", hospClinic.GetOtherServices)
 	providerServices.Get("/get-doctor-info/:doctorId", hospClinic.GetDoctorsInfo)
 	providerServices.Get("/get-pharmacy-other-service-info/:otherServiceId", pharmacy.GetOtherServiceInfo)
 	providerServices.Get("/get-trainer-info/:trainerId", fitnessCenter.GetTrainerInfo)
 	providerServices.Get("/get-fitness-other-service-info/:otherServiceId", fitnessCenter.GetOtherServiceInfo)
 	providerServices.Put("/update-pharmacy-other-service-info/:otherServiceId", pharmacy.UpdateOtherServiceInfo)
+	providerServices.Put("/edit-physiotherapist-professional-info", physiotherapist.UpdatePhysiotherapistDetails)
+	providerServices.Delete("/delete-physiotherapist-service/:serviceId", physiotherapist.DeleteService)
 	providerServices.Post("/add-pharmacy-other-service", pharmacy.AddOtherServices)
+	providerServices.Post("/add-more-physiotherapist-service", physiotherapist.AddMorePhysiotherapistServices)
 	// providerServices.Put("/update-doctor-image/:doctorId", hospClinic.UpdateDoctorImage)
 	providerServices.Post("/add-hospClinic-other-services", hospClinic.AddServices)
 	providerServices.Put("/update-doctor-info/:doctorId", hospClinic.UpdateDoctorInfo)
